--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <div class = "group">
-      <header>
+      <header class="group">
         <h1>Pete Thinkful | Artist</h1>
         <nav>
           <a href="#about">About</a>
@@ -22,14 +21,13 @@
           <a href="#contact">Contact</a>
         </nav>
       </header>
-    </div>
 
     <main>
       <div>
         <!-- About section -->
         <article id="about">
           <h2>About</h2>
-                   <section class="group">
+          <section class="group">
             <div>
               <img
                 class="image-circle"
