--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 alt="Pete Thinkful"
               />
             </div>
-            <div>
+            <div class="left-aligned">
             <h3>Hi! I'm Pete Thinkful</h3>
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
