--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <!-- Header section -->
       <header class="group">
-        <div><h1>Pete Thinkful | Artist</h1></div>
-        <div>
+        <div width= 450px><h1>Pete Thinkful | Artist</h1></div>
+        <div width= 450px>
           <nav>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
