--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <!-- Header section -->
       <header class="group">
-        <div width= 600px><h1>Pete Thinkful | Artist</h1></div>
-        <div width= 600px>
+        <div style = "width: 600px"><h1>Pete Thinkful | Artist</h1></div>
+        <div style = "width: 600px">
           <nav>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
