--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <!-- Header section -->
-      <header class="group">
+      <header class="group" style ="width: 450px;">
         <div style ="width: 450px;"><h1>Pete Thinkful | Artist</h1></div>
         <div style ="width: 450px;">
-          <nav>
+          <nav style ="width: 450px;">
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
