--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <!-- Header section -->
-      <header class="group" style ="width: 450px;">
-        <div style ="width: 450px;"><h1>Pete Thinkful | Artist</h1></div>
-        <div style ="width: 450px;">
+      <header class="group" style ="display: block;">
+        <div><h1 style ="width: 450px;">Pete Thinkful | Artist</h1></div>
+        <div>
           <nav style ="width: 450px;">
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
