--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- Header section -->
-      <header class="group" style ="display: block;">
+      <header class="group">
         <div><h1 style ="width: 450px;">Pete Thinkful | Artist</h1></div>
         <div>
           <nav style ="width: 450px;">
