--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <!-- Header section -->
       <header class="group">
-        <div><h1 style ="width: 450px;">Pete Thinkful | Artist</h1></div>
-        <div>
-          <nav style ="width: 450px;">
+        <div style ="width: 450px;">><h1 style ="width: 90%">Pete Thinkful | Artist</h1></div>
+        <div style ="width: 450px;">>
+          <nav style ="width: 90%;">
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
