--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <!-- Header section -->
       <header class="group">
-        <div style ="width: 450px;">><h1 style ="width: 90%">Pete Thinkful | Artist</h1></div>
-        <div style ="width: 450px;">>
+        <div><h1 style ="width: 90%">Pete Thinkful | Artist</h1></div>
+        <div>
           <nav style ="width: 90%;">
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
