--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
   </head>
   <body>
     <!-- Header section -->
-      <header class="group">
-        <div><h1 style ="width: 90%">Pete Thinkful | Artist</h1></div>
-        <div>
-          <nav style ="width: 90%;">
-            <a href="#about">About</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-          </nav>
-        </div>
-      </header>
+      <div style="justify-content: center; text-align: center;">
+        <header class="group">
+          <div class="reduced-padding"><h1>Pete Thinkful | Artist</h1></div>
+          <div class="reduced-padding">
+            <nav>
+              <a href="#about">About</a>
+              <a href="#portfolio">Portfolio</a>
+              <a href="#contact">Contact</a>
+            </nav>
+          </div>
+        </header>
+      </div>
 
     <main>
       <div>
