--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- Portfolio section -->
         <article id="portfolio">
           <h2>Portfolio</h2>
-          <div class = "group">
+          <div class = "group" style="justify-content: center; text-align: center;">
             <section>
               <h3>Abstract Red</h3>
               <div>
