--- a/index.html
+++ b/index.html
@@ -75,38 +75,38 @@
         <!-- Portfolio section -->
         <article id="portfolio">
           <h2>Portfolio</h2>
-          <div class = "group" style="justify-content: center; text-align: center;">
+          <div class = "group">
             <section>
               <h3>Abstract Red</h3>
               <div>
                 <img src="images/abstract-red.png" alt="Abstract Red" />
+                <p>
+                  Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
+                  waistcoat scenester hell of.
+                </p>
               </div>
-              <p>
-                Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
-                waistcoat scenester hell of.
-              </p>
             </section>
 
             <section>
               <h3>Spiral Zany</h3>
               <div>
                 <img src="images/spiral-zany.png" alt="Spiral Zany" />
+                <p>
+                  Sriracha portland taxidermy cronut messenger bag, vegan
+                  distillery. Vaporware kickstarter air plant mumblecore food truck.
+                </p>
               </div>
-              <p>
-                Sriracha portland taxidermy cronut messenger bag, vegan
-                distillery. Vaporware kickstarter air plant mumblecore food truck.
-              </p>
             </section>
 
             <section>
               <h3>Melted Rainbow</h3>
               <div>
                 <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+                <p>
+                  Edison bulb single-origin coffee snackwave, actually ennui
+                  locavore shabby chic forage.
+                </p>
               </div>
-              <p>
-                Edison bulb single-origin coffee snackwave, actually ennui
-                locavore shabby chic forage.
-              </p>
             </section>
           </div>
         </article>
