--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <h3>Abstract Red</h3>
               <div>
                 <img src="images/abstract-red.png" alt="Abstract Red" />
-                <p>
+                <p class ="portfolio-text">
                   Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
                   waistcoat scenester hell of.
                 </p>
@@ -91,7 +91,7 @@
               <h3>Spiral Zany</h3>
               <div>
                 <img src="images/spiral-zany.png" alt="Spiral Zany" />
-                <p>
+                <p class ="portfolio-text">
                   Sriracha portland taxidermy cronut messenger bag, vegan
                   distillery. Vaporware kickstarter air plant mumblecore food truck.
                 </p>
@@ -102,7 +102,7 @@
               <h3>Melted Rainbow</h3>
               <div>
                 <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
-                <p>
+                <p class ="portfolio-text">
                   Edison bulb single-origin coffee snackwave, actually ennui
                   locavore shabby chic forage.
                 </p>
