--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <article id="portfolio">
           <h2>Portfolio</h2>
           <div class = "group">
-            <section>
+            <section class="taller-height">
               <h3>Abstract Red</h3>
               <div>
                 <img src="images/abstract-red.png" alt="Abstract Red" />
