--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <article id="portfolio">
           <h2>Portfolio</h2>
           <div class = "group">
-            <section class="taller-height">
+            <section style ="height: 460px;">
               <h3>Abstract Red</h3>
               <div>
                 <img src="images/abstract-red.png" alt="Abstract Red" />
@@ -87,7 +87,7 @@
               </div>
             </section>
 
-            <section>
+            <section style ="height: 460px;">
               <h3>Spiral Zany</h3>
               <div>
                 <img src="images/spiral-zany.png" alt="Spiral Zany" />
@@ -98,7 +98,7 @@
               </div>
             </section>
 
-            <section>
+            <section style ="height: 460px;">
               <h3>Melted Rainbow</h3>
               <div>
                 <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
